Project

General

Profile

Actions

Fix #47568

closed

client: more reasonable statfs ffree

Added by mingshuai wang over 3 years ago. Updated over 3 years ago.

Status:
Resolved
Priority:
Normal
Category:
-
Target version:
% Done:

0%

Source:
Community (dev)
Tags:
Backport:
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

client: more reasonable statfs ffree

'ceph-fuse 1038 - - - /cephfs'

is more reasonable than

'ceph-fuse 1038 1038 0 100% /cephfs'

pr : https://github.com/ceph/ceph/pull/36127

Actions #1

Updated by Patrick Donnelly over 3 years ago

  • Status changed from New to Resolved
  • Assignee set to mingshuai wang
  • Target version set to v16.0.0
  • Source set to Community (dev)
Actions

Also available in: Atom PDF