client: more reasonable statfs ffree

'ceph-fuse 1038 - - - /cephfs'
is more reasonable than
'ceph-fuse 1038 1038 0 100% /cephfs'

Fixs: https://tracker.ceph.com/issues/47568

Signed-off-by: redickwang <redickwang@tencent.com>